setup new structure

--- a/config/requirejs.yml
+++ b/config/requirejs.yml
@@ -9,6 +9,7 @@ paths:
   'jquery': 'jquery/dist/jquery'
   'lodash': 'lodash/dist/lodash'
   'bootstrap': 'sass-bootstrap/dist/js/bootstrap'
+  'common': 'common/common'
 shim:
   'angular':
     exports: 'angular'
